JSAI/error/src/test/resources/base/aitests_a004.js
var x = 1;
print(x)
var y = x;
print(y)
x = "str";
print(x)
print(y)
y
